# open-swarm-ai-agents

./: .coveragerc  .drone.yml  .gitlab-ci.yml  .pylintrc  .slugignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  Vagrantfile  azure-pipelines.yml  bitbucket-pipelines.yml  build.gradle  cloudbuild.yaml  ecosystem.config.js  gradlew  gradlew.bat  netlify.toml  serverless.yml  settings.gradle  setup.cfg  sonar-project.properties  tox.ini
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
docs/: index.md
scripts/: hello.py
tests/: test_main.py
