[metadata]
name = open-swarm-ai-agents
version = 0.0.1
author = Your Name
author_email = your@email.com
description = A framework for building and coordinating multi-agent AI systems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-username/open-swarm-ai-agents
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    # Add your project's dependencies here

[options.packages.find]
where = src
